@@ -18,7 +18,7 @@
         <!-- Content -->
         <div class="wrapper">
             <h2 class="spacing_medium" style="text-transform: none;">Graphical Projects</h2>
-            <p align="center">Below are some projects that are focused on presenting graphics.</p>
+            <p align="justify" style="font-size: 17px;">Graphical projects are projects that showcases the use of existing technologies to present graphical work such as 3D models or images in the browser. Almost every device has a browser so these technologies serves as a great way to share ideas and portfolios!</p>
             <!-- Projects -->
             <div class="clear" id="container" style="margin-left: -91px; width: 1052px;" align="center">
                 <!-- X3DOM Project -->
