@@ -40,7 +40,7 @@
                 <div id="content" style="width: 860px;">
                     <section class="index_grad clear">
                             <h4>Hello, welcome to my web site.</h4>
-                            <p align="center">This is a web site of miscellaneous projects. It was created as an intellectual challenge for myself. Feel free to browse around, maybe one of the projects may turn out to be useful for you!</p>	
+                            <p align="center">This is a web site of miscellaneous. It was created as an intellectual challenge for myself as one of my main goals in creating this website was to use only Notepad++. Feel free to browse around, maybe one of the projects may turn out to be useful for you!</p>	
                     </section>
                     <div align="center"><img src="https://dmctruong.000webhostapp.com/images/logo.png" width="100px" height="100px"></div>
                     
@@ -55,7 +55,7 @@
                                     <figure><img src="https://dmctruong.000webhostapp.com/images/index_projects.png" class="rectangle_image"  alt="">
                                         <figcaption>
                                             <h2>Class Projects</h2>
-                                            <p>Various projects that were created in class.</p>
+                                            <p>This category showcases a few projects that were created in class. These projects were built based on the requirements given under the time limit of two weeks. The projects vary from implementing a Naive Bayes Classifier to a simple server/client program written in C.</p>
                                             <footer class="read_more"><a href="projects.html">Read More &raquo;</a></footer>
                                         </figcaption>
                                     </figure>
@@ -67,7 +67,7 @@
                                     <figure><img src="https://dmctruong.000webhostapp.com/images/index_graphics.png" class="rectangle_image" alt="">
                                         <figcaption>
                                             <h2>Computer Graphics</h2>
-                                            <p>Projects related to computer graphics.</p>
+                                            <p>The projects under this category are focused more on visual presentations. This includes projects that demostrates presenting 3D models in browsers and creating a virtual gallery to showcase one's work.</p>
                                             <footer class="read_more"><a href="graphics.html">Read More &raquo;</a></footer>
                                         </figcaption>
                                     </figure>
@@ -79,7 +79,7 @@
                                     <figure><img src="https://dmctruong.000webhostapp.com/images/index_tools.png" class="rectangle_image" alt="">
                                         <figcaption>
                                             <h2>Tools</h2>
-                                            <p>Tools that are created to help the user with production.</p>
+                                            <p>The tools under this category serves to help the user increase productivity by automating repetitive tasks. More tools will be added to this category in the future.</p>
                                             <footer class="read_more"><a href="tools.html">Read More &raquo;</a></footer>
                                         </figcaption>
                                     </figure>
