@@ -18,23 +18,23 @@
         <!-- Content -->
         <div class="wrapper">
             <h2 class="spacing_large" align="center">Class Projects</h2>
-            <p align="center">Class projects were created for class assignments that may take up to two or more weeks to complete. Specific requirements were given for each project.</p>
+            <p align="justify" style="margin-top: -10px; font-size: 15px;">Below are a few selected class projects. Each project were allowed up to two weeks to complete with given requirements. The projects were selected to showcase because of the completeness and functionality. You are welcome to check out these projects!</p>
             <!-- Content Body -->
             <div id="projects" class="clear">   
                 <section id="latest">
                     <article class="one_quarter">
                         <figure><a href="projects_employee.html"><img src="https://dmctruong.000webhostapp.com/images/projects_employee.png" width="200" height="300" alt=""></a>
-                            <figcaption>Employee Management System</figcaption>
+                            <figcaption style="padding-top: 20px; text-align: center; font-size: 20px; font-family: 'Quicksand', sans-serif;">Employee Management System</figcaption>
                         </figure>
                     </article>
                     <article class="one_quarter">
                         <figure><a href="projects_bayes.html"><img src="https://dmctruong.000webhostapp.com/images/projects_bayes.png" width="200" height="300" alt=""></a>
-                            <figcaption>Naive Bayes Classifier</figcaption>
+                            <figcaption style="padding-top: 20px; text-align: center; font-size: 20px; font-family: 'Quicksand', sans-serif;">Naive Bayes Classifier</figcaption>
                         </figure>
                     </article>
                     <article class="one_quarter">
                         <figure><a href="projects_server.html"><img src="https://dmctruong.000webhostapp.com/images/projects_server.png" width="200" height="300" alt=""></a>
-                            <figcaption>Server and Client</figcaption>
+                            <figcaption style="padding-top: 20px; text-align: center; font-size: 20px; font-family: 'Quicksand', sans-serif;">Server and Client</figcaption>
                         </figure>
                     </article>
                 </section>
