@@ -68,6 +68,7 @@
                         </ul>
                     </div>
 
+                    
                     <!-- Installation -->
                     <h3 id="content_h3" >Installation</h3>
                     <div align="left" style="margin-left: 10%;">
@@ -84,6 +85,7 @@
                         <a href="https://github.com/DMCTruong/Naive-Bayes-Classifier" class="download_a"><button class="download" align="center">Download at GitHub</button></a>     
                     </div>
 
+                    
                     <!-- Usage -->
                     <h3 id="content_h3">Usage</h3>
                     <div align="left" style="margin-left: 10%;"> 
@@ -95,11 +97,13 @@
                         </ol>
                     </div>
 
+                    
                     <div> <!-- Support -->
                         <h3 id="content_h3">Support</h3>
                         <p>To report an issue, a bug, or request a feature, please send it <a href="https://github.com/DMCTruong/Naive-Bayes-Classifier/issues">here</a>.</p>
                     </div>
 
+                    
                     <div> <!-- Contribute -->
                         <h3 id="content_h3">Contribute</h3>
                         <p style="margin-left: 10%; margin-right: 10%">To contribute, please use <a href="https://guides.github.com/introduction/flow/">Github Flow</a>.</p>
