@@ -19,8 +19,7 @@
         <div class="wrapper">
             <div id="tools" align="center">
                 <h2 class="spacing_medium">Tools and Helpers</h2>
-                <p>This category of projects contain some tools that I have created and use daily to help me develop more efficiently.</p>
-                <p>I hope they may be of use for you too.</p>
+                <p align="justify">This category contains some tools that I have created and use daily to help speed up productivity by automating common tasks and reducing time that are spent doing these tasks. I hope these tools are helpful for you too! More tools will be created and added in the future.</p>
             </div>
             <div class="clear" id="container" style="width: 860px;">
                 <section id="tools_projects">  
@@ -30,7 +29,7 @@
                                 <figure><img src="https://dmctruong.000webhostapp.com/images/tools_github.png" alt="Git Bash Scripts">
                                     <figcaption>
                                         <h4>Git Bash Scripts</h4>
-                                        <p>Some simple scripts created for Git Bash to make the work flow more efficient.</p>
+                                        <p>Some simple scripts created for Git Bash to help speed up the work flow.</p>
                                         <footer class="tools_read_more"><a href="tools_scripts.html">Read More &raquo;</a></footer>
                                     </figcaption>
                                 </figure>
